# SnJake_JPG_Artifacts_Noise_Cleaner

./: LICENSE.md  README.md  __init__.py  jpg_noise_remover.py  legacy_unet.py  nafnet_unet.py  pyproject.toml  requirements.txt
js/: auto_colors.js  color.js  decor_slider.js  decor_slider_separate.js  jpg_noise_remover.js
training_code/: README_Git.md  README_Hug.md  dataset.py  ema.py  infer.py  losses.py  requirements.txt  schedulers.py  train.py  utils.py
training_code/models/: __init__.py  unet.py
training_code/utils/: compare_infer.py  convert_to_safetensors.py
