[project]
name = "snjake_jpg_artifacts_noise_cleaner"
description = "This is a custom node for ComfyUI designed to remove JPEG compression artifacts and digital noise from images. It is powered by a lightweight UNetRestorer model that efficiently restores image quality."
version = "1.0.1"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = ["huggingface_hub", "safetensors"]

[project.urls]
Repository = "https://github.com/SnJake/SnJake_JPG_Artifacts_Noise_Cleaner"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/SnJake/SnJake_JPG_Artifacts_Noise_Cleaner/wiki"
"Bug Tracker" = "https://github.com/SnJake/SnJake_JPG_Artifacts_Noise_Cleaner/issues"

[tool.comfy]
PublisherId = "snjake"
DisplayName = "SnJake_JPG_Artifacts_Noise_Cleaner"
Icon = ""
includes = []
requires-comfyui = ">=1.0.0"  # ComfyUI version compatibility
